--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,3 +20,7 @@ fallback_version = "0.0.0"
 [tool.scikit-build]
 metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
 build.verbose = true
+
+[tool.yapf]
+based_on_style = "google"
+column_limit = 200
