Add pytest and use matrix in github action.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,3 +24,12 @@ build.verbose = true
 [tool.yapf]
 based_on_style = "google"
 column_limit = 200
+
+[project.optional-dependencies]
+dev = [
+  "yapf",
+  "pylint",
+  "mypy",
+  "pytest",
+  "pytest-cov",
+]
