--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -25,3 +25,24 @@ jobs:
 
       - name: run
         run: ${{runner.workspace}}/build/main
+
+  python:
+    runs-on: ubuntu-latest
+
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version: ['3.10', '3.11', '3.12', '3.13']
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-python@v5
+        with:
+          python-version: ${{ matrix.python-version }}
+
+      - name: dependencies
+        run: pip install .
+
+      - name: pytest
+        run: python examples/main.py
