--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
     "scripts": {
         "emcc": "emcc jsds/ds.cc src/*.cc -Iinclude -lembind -o jsds/ds.mjs -O3 -ffast-math -flto -s ALLOW_MEMORY_GROWTH=1 -s MODULARIZE=1 -s EXPORT_ES6=1 -s SINGLE_FILE=1",
         "build": "npx rollup --config",
-        "test": "jest --testMatch '**/test_*.mjs'",
+        "test": "cross-env NODE_OPTIONS='$NODE_OPTIONS --experimental-vm-modules' jest --testMatch '**/test_*.mjs' --transform '{}' --coverage",
         "all": "run-s emcc build test"
     },
     "devDependencies": {
         "@rollup/plugin-terser": "^0.4.4",
+        "cross-env": "^7.0.3",
         "jest": "^30.0.4",
         "npm-run-all": "^4.1.5",
         "rollup": "^4.44.2"
