Remove useless arguments in npm scripts.

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "scripts": {
-        "emcc": "emcc jsds/ds.cc src/*.cc -Iinclude -lembind -o jsds/ds.mjs -O3 -ffast-math -flto -s ALLOW_MEMORY_GROWTH=1 -s MODULARIZE=1 -s EXPORT_ES6=1 -s SINGLE_FILE=1",
+        "emcc": "emcc jsds/ds.cc src/*.cc -Iinclude -lembind -o jsds/ds.mjs --emit-tsd ds.d.ts -O3 -ffast-math -flto -s ALLOW_MEMORY_GROWTH=1 -s SINGLE_FILE=1",
         "build": "npx rollup --config",
-        "test": "cross-env NODE_OPTIONS='$NODE_OPTIONS --experimental-vm-modules' jest --testMatch '**/test_*.mjs' --transform '{}' --coverage",
+        "test": "cross-env NODE_OPTIONS='$NODE_OPTIONS --experimental-vm-modules' jest --testMatch '**/test_*.mjs' --coverage",
         "all": "run-s emcc build test"
     },
     "devDependencies": {
