--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
     "scripts": {
-        "emcc": "emcc jsds/ds.cc src/*.cc -Iinclude -lembind -o jsds/ds.mjs --emit-tsd ds.d.ts -O3 -ffast-math -flto -s ALLOW_MEMORY_GROWTH=1 -s SINGLE_FILE=1",
+        "emcc": "emcc jsds/ds.cc src/*.cc -Iinclude -lembind -o jsds/ds.mjs --emit-tsd ds.d.mts -O3 -ffast-math -flto -s ALLOW_MEMORY_GROWTH=1 -s SINGLE_FILE=1",
         "build": "npx rollup --config",
         "test": "cross-env NODE_OPTIONS='$NODE_OPTIONS --experimental-vm-modules' jest --testMatch '**/test_*.mjs' --coverage",
         "all": "run-s emcc build test"
     },
     "devDependencies": {
         "@rollup/plugin-terser": "^0.4.4",
+        "@rollup/plugin-typescript": "^12.1.4",
         "cross-env": "^7.0.3",
         "jest": "^30.0.4",
         "npm-run-all": "^4.1.5",
-        "rollup": "^4.44.2"
+        "rollup": "^4.44.2",
+        "tslib": "^2.8.1",
+        "typescript": "^5.8.3"
     }
 }
