--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
         "jest": "^30.0.4",
         "npm-run-all": "^4.1.5",
         "rollup": "^4.44.2"
+    },
+    "dependencies": {
+        "ejs": "^3.1.10"
     }
 }
