--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
     "scripts": {
         "emcc": "emcc jsds/ds.cc src/*.cc -Iinclude -lembind -o jsds/ds.mjs --emit-tsd ds.d.mts -O3 -ffast-math -flto -s ALLOW_MEMORY_GROWTH=1 -s SINGLE_FILE=1",
-        "build": "npx rollup --config",
-        "test": "cross-env NODE_OPTIONS='$NODE_OPTIONS --experimental-vm-modules' jest --testMatch '**/test_*.mjs' --coverage",
-        "all": "run-s emcc build test"
+        "prepare": "run-p emcc",
+        "rollup": "rollup --config rollup.config.mjs",
+        "build": "run-p rollup",
+        "test": "cross-env NODE_OPTIONS='$NODE_OPTIONS --experimental-vm-modules' jest --config=jest.config.mjs",
+        "all": "run-s prepare build test"
     },
     "devDependencies": {
         "@rollup/plugin-terser": "^0.4.4",
         "cross-env": "^7.0.3",
+        "ejs": "^3.1.10",
         "jest": "^30.0.4",
         "npm-run-all": "^4.1.5",
         "rollup": "^4.44.2"
-    },
-    "dependencies": {
-        "ejs": "^3.1.10"
     }
 }
