--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,7 +11,7 @@ repos:
   hooks:
   - id: yapf
 
-- repo: https://github.com/pre-commit/mirrors-jshint
-  rev: v2.13.6
+- repo: https://github.com/biomejs/pre-commit
+  rev: v2.1.2
   hooks:
-  - id: jshint
+  - id: biome-check
