--- a/biome.json
+++ b/biome.json
@@ -4,12 +4,13 @@
         "includes": ["**/*.mjs", "**/*.mts", "**/*.json", "**/*.ejs"]
     },
     "formatter": {
+        "enabled": true,
         "indentStyle": "space",
         "indentWidth": 4,
         "lineWidth": 120
     },
     "linter": {
-        "enabled": false
+        "enabled": true
     },
     "assist": {
         "enabled": false
