--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -64,8 +64,11 @@ jobs:
 
       - uses: mymindstorm/setup-emsdk@v14
 
+      - name: dependencies
+        run: npm install --include=dev
+
       - name: build
-        run: npm run emcc
+        run: npm run all
 
       - name: run
-        run: node examples/main.mjs
+        run: node dist/example.mjs
