--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
     },
     "devDependencies": {
         "@rollup/plugin-terser": "^0.4.4",
+        "@rollup/plugin-typescript": "^12.1.4",
+        "@types/jest": "^30.0.0",
         "cross-env": "^7.0.3",
         "ejs": "^3.1.10",
-        "jest": "^30.0.4",
+        "jest": "^30.0.5",
         "npm-run-all": "^4.1.5",
-        "rollup": "^4.44.2"
+        "rollup": "^4.45.1",
+        "ts-jest": "^29.4.0",
+        "ts-node": "^10.9.2",
+        "tslib": "^2.8.1",
+        "typescript": "^5.8.3"
     }
 }
