--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+    "name": "jsds",
     "scripts": {
         "emcc": "emcc jsds/ds.cc src/*.cc -Iinclude -lembind -o jsds/ds.mjs --emit-tsd ds.d.mts -O3 -ffast-math -flto -s ALLOW_MEMORY_GROWTH=1 -s SINGLE_FILE=1",
         "prepare": "run-p emcc",
