--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
     "name": "jsds",
     "scripts": {
         "emcc": "emcc jsds/ds.cc src/*.cc -Iinclude -lembind -o jsds/ds.mjs --emit-tsd ds.d.mts -O3 -ffast-math -flto -s ALLOW_MEMORY_GROWTH=1 -s SINGLE_FILE=1",
-        "prepare": "run-p emcc",
         "rollup": "rollup --config rollup.config.mjs",
-        "build": "run-p rollup",
+        "build": "run-s emcc rollup",
         "test": "cross-env NODE_OPTIONS='$NODE_OPTIONS --experimental-vm-modules' jest --config=jest.config.mjs",
-        "all": "run-s prepare build test"
+        "all": "run-s build test"
     },
     "devDependencies": {
         "@rollup/plugin-terser": "^0.4.4",
