--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "@rollup/plugin-terser": "^0.4.4",
         "@rollup/plugin-typescript": "^12.1.4",
         "@types/jest": "^30.0.0",
+        "@web/rollup-plugin-copy": "^0.5.1",
         "cross-env": "^7.0.3",
         "ejs": "^3.1.10",
         "jest": "^30.0.5",
