--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,5 +5,6 @@
         "strict": true,
         "esModuleInterop": true,
         "isolatedModules": true
-    }
+    },
+    "include": ["jsds/*"]
 }
