Add to emit declaration.
                WIP:

                1. source map: 完成.
                2. 生成.d.mts，完成，但是文件名不同。
                3. package info: metadata添加完了，还需要加入导出的module, types信息

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,9 @@
         "strict": true,
         "esModuleInterop": true,
         "isolatedModules": true,
-        "skipLibCheck": true
+        "skipLibCheck": true,
+        "declaration": true,
+        "outDir": "dist"
     },
     "include": ["jsds/*"]
 }
