--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "all": "run-s build test"
     },
     "devDependencies": {
+        "@rollup/plugin-node-resolve": "^16.0.1",
         "@rollup/plugin-terser": "^0.4.4",
         "@rollup/plugin-typescript": "^12.1.4",
         "@types/jest": "^30.0.0",
