--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
         "all": "run-s build test"
     },
     "devDependencies": {
+        "@rollup/plugin-commonjs": "^28.0.6",
+        "@rollup/plugin-json": "^6.1.0",
         "@rollup/plugin-node-resolve": "^16.0.1",
         "@rollup/plugin-terser": "^0.4.4",
         "@rollup/plugin-typescript": "^12.1.4",
@@ -26,6 +28,7 @@
         "@web/rollup-plugin-copy": "^0.5.1",
         "cross-env": "^7.0.3",
         "ejs": "^3.1.10",
+        "express": "^5.1.0",
         "jest": "^30.0.5",
         "npm-run-all": "^4.1.5",
         "rollup": "^4.45.1",
