--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -40,6 +40,7 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
+          cache: 'pip'
 
       - name: build
         run: pip install .
@@ -61,14 +62,17 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
+          cache: 'npm'
 
-      - uses: mymindstorm/setup-emsdk@v14
+      - uses: pyodide/setup-emsdk@v15
+        with:
+          actions-cache-folder: 'emsdk-cache'
 
       - name: dependencies
-        run: npm install --include=dev
+        run: npm ci
 
       - name: build
-        run: npm run all
+        run: npm run build
 
       - name: run
         run: node dist/example.mjs
