--- a/.github/workflows/jest.yml
+++ b/.github/workflows/jest.yml
@@ -19,11 +19,14 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
+          cache: 'npm'
 
-      - uses: mymindstorm/setup-emsdk@v14
+      - uses: pyodide/setup-emsdk@v15
+        with:
+          actions-cache-folder: 'emsdk-cache'
 
       - name: dependencies
-        run: npm install --include=dev
+        run: npm ci
 
       - name: jest
         run: npm run all
