--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,15 +21,21 @@ fallback_version = "0.0.0"
 metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
 build.verbose = true
 
-[tool.yapf]
-based_on_style = "google"
-column_limit = 200
-
 [project.optional-dependencies]
 dev = [
-  "yapf",
-  "pylint",
+  "ruff",
   "mypy",
   "pytest",
   "pytest-cov",
 ]
+
+[tool.ruff]
+line-length = 120
+
+[tool.ruff.lint]
+select = ["E4", "E7", "E9", "F"]
+
+[tool.ruff.lint.per-file-ignores]
+"tests/*" = ["E741", "E743", "F841"]
+
+[tool.ruff.format]
