--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,16 @@
 [build-system]
-requires = ["scikit-build-core", "pybind11", "setuptools_scm"]
+requires = [
+  "scikit-build-core~=0.11.6",
+  "pybind11~=3.0.1",
+  "setuptools-scm~=9.2.2",
+]
 build-backend = "scikit_build_core.build"
 
 [project]
 name = "pyds"
 dynamic = ["version"]
 dependencies = []
-requires-python = ">=3"
+requires-python = ">=3.10, <3.14"
 authors = [{ email = "hzhangxyz@outlook.com", name = "Hao Zhang" }]
 description = "A deductive system"
 readme = "README.md"
@@ -23,10 +27,10 @@ build.verbose = true
 
 [project.optional-dependencies]
 dev = [
-  "ruff",
-  "mypy",
-  "pytest",
-  "pytest-cov",
+  "ruff~=0.14.6",
+  "mypy~=1.18.2",
+  "pytest~=9.0.1",
+  "pytest-cov~=7.0.0",
 ]
 
 [tool.ruff]
