--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -26,3 +26,23 @@ jobs:
 
       - name: pytest
         run: pytest --cov=pyds
+
+  pypi:
+    runs-on: ${{ matrix.os }}
+
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest, macos-latest]
+
+    steps:
+      - uses: actions/checkout@v6
+
+      - name: install cibuildwheel
+        run: python -m pip install cibuildwheel==3.3.0
+
+      - name: build wheels
+        run: python -m cibuildwheel
+
+      - uses: actions/upload-artifact@v5
+        with:
+          path: ./wheelhouse/*.whl
