--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -40,7 +40,7 @@ jobs:
       - uses: actions/checkout@v6
 
       - name: install cibuildwheel
-        run: python -m pip install cibuildwheel==3.3.0
+        run: python -m pip install cibuildwheel
 
       - name: build wheels
         run: python -m cibuildwheel
