--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -31,6 +31,7 @@ jobs:
 
   pypi:
     runs-on: ${{ matrix.os }}
+    needs: pytest
 
     strategy:
       matrix:
@@ -38,6 +39,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v6
+
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.13'
 
       - name: install cibuildwheel
         run: python -m pip install cibuildwheel
