--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -29,7 +29,7 @@ jobs:
       - name: pytest
         run: pytest --cov=pyds
 
-  pypi:
+  wheels:
     runs-on: ${{ matrix.os }}
     needs: pytest
 
@@ -54,3 +54,21 @@ jobs:
       - uses: actions/upload-artifact@v5
         with:
           path: ./wheelhouse/*.whl
+
+  upload:
+    runs-on: ubuntu-latest
+    needs: wheels
+    if: "github.event_name == 'push' && (startsWith(github.ref, 'refs/tags')"
+
+    environment: pypi
+
+    steps:
+      - uses: actions/download-artifact@v3
+
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.13'
+
+      - uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          packages-dir: artifact
