--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -61,7 +61,7 @@ jobs:
   upload:
     runs-on: ubuntu-latest
     needs: wheels
-    if: "github.event_name == 'push' && (startsWith(github.ref, 'refs/tags')"
+    if: "github.event_name == 'push' && startsWith(github.ref, 'refs/tags')"
 
     environment: pypi
 
