Add merge multiple in the pypi upload job.

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -76,6 +76,7 @@ jobs:
         with:
           pattern: wheels-*
           path: dist
+          merge-multiple: true
 
       - uses: pypa/gh-action-pypi-publish@release/v1
         with:
