Update setup-python action from v4 to v6 and make use of cache.

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -46,9 +46,10 @@ jobs:
       - name: recovery tag information
         run: git fetch --tags --force
 
-      - uses: actions/setup-python@v4
+      - uses: actions/setup-python@v6
         with:
           python-version: '3.13'
+          cache: 'pip'
 
       - name: install cibuildwheel
         run: pip install cibuildwheel
