--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -6,6 +6,9 @@ on:
   - pull_request
   - push
 
+env:
+  PYTHON_LATEST_VERSION: '3.13'
+
 jobs:
   pytest:
     runs-on: ubuntu-latest
@@ -48,7 +51,7 @@ jobs:
 
       - uses: actions/setup-python@v6
         with:
-          python-version: '3.13'
+          python-version: ${{ env.PYTHON_LATEST_VERSION }}
           cache: 'pip'
 
       - name: install cibuildwheel
