--- a/.github/workflows/jest.yml
+++ b/.github/workflows/jest.yml
@@ -8,6 +8,7 @@ on:
 
 env:
   EM_CACHE_FOLDER: 'emsdk-cache'
+  NODE_LATEST_VERSION: '24'
 
 jobs:
   jest:
@@ -40,3 +41,38 @@ jobs:
 
       - name: jest
         run: npm run all
+
+  npm:
+    runs-on: ubuntu-latest
+    needs: jest
+
+    if: "github.event_name == 'push' && startsWith(github.ref, 'refs/tags')"
+
+    steps:
+      - uses: actions/checkout@v6
+
+      - name: recovery tag information
+        run: git fetch --tags --force
+
+      - uses: actions/setup-node@v6
+        with:
+          node-version: ${{ env.NODE_LATEST_VERSION }}
+          cache: 'npm'
+
+      - uses: actions/cache@v4
+        with:
+          path: ${{ env.EM_CACHE_FOLDER }}
+          key: jest-em-cache-${{ runner.os }}-${{ env.NODE_LATEST_VERSION }}
+
+      - uses: pyodide/setup-emsdk@v15
+        with:
+          actions-cache-folder: ${{ env.EM_CACHE_FOLDER }}
+
+      - name: dependencies
+        run: npm ci
+
+      - name: build
+        run: npm run build
+
+      - name: publish
+        run: npm publish
