Use npm version from-git.

--- a/.github/workflows/jest.yml
+++ b/.github/workflows/jest.yml
@@ -68,6 +68,9 @@ jobs:
         with:
           actions-cache-folder: ${{ env.EM_CACHE_FOLDER }}
 
+      - name: version
+        run: npm version from-git
+
       - name: dependencies
         run: npm ci
 
