--- a/.github/workflows/jest.yml
+++ b/.github/workflows/jest.yml
@@ -48,6 +48,8 @@ jobs:
 
     if: "github.event_name == 'push' && startsWith(github.ref, 'refs/tags')"
 
+    environment: npm
+
     steps:
       - uses: actions/checkout@v6
 
