--- a/.github/workflows/jest.yml
+++ b/.github/workflows/jest.yml
@@ -49,6 +49,8 @@ jobs:
     if: "github.event_name == 'push' && startsWith(github.ref, 'refs/tags')"
 
     environment: npm
+    permissions:
+      id-token: write
 
     steps:
       - uses: actions/checkout@v6
