--- a/package.json
+++ b/package.json
@@ -1,5 +1,12 @@
 {
     "name": "atsds",
+    "description": "A deductive system",
+    "author": "Hao Zhang <hzhangxyz@outlook.com>",
+    "license": "GPL-3.0-or-later",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/USTC-KnowledgeComputingLab/ds.git"
+    },
     "type": "module",
     "main": "dist/tsds.mjs",
     "types": "dist/tsds.d.mts",
