--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,3 +47,6 @@ select = ["E4", "E7", "E9", "F"]
 "tests/*" = ["E741", "E743", "F841"]
 
 [tool.ruff.format]
+
+[tool.cibuildwheel]
+skip = "*-win32"
