--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,7 +21,7 @@ if(pybind11_FOUND)
   pybind11_add_module(pyds ${CMAKE_CURRENT_SOURCE_DIR}/pyds/ds.cc)
   target_link_libraries(pyds PRIVATE ${PROJECT_NAME})
   set_property(TARGET pyds PROPERTY INTERPROCEDURAL_OPTIMIZATION True)
-  set_target_properties(pyds PROPERTIES OUTPUT_NAME ds)
+  set_target_properties(pyds PROPERTIES OUTPUT_NAME _ds)
   install(TARGETS pyds DESTINATION pyds)
 else()
   message(STATUS "pybind11 not found, Python bindings will not be built.")
