--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -10,13 +10,38 @@ env:
   PYTHON_LATEST_VERSION: '3.13'
 
 jobs:
-  wheels:
-    runs-on: ${{ matrix.os }}
+  pytest:
+    runs-on: ubuntu-latest
 
     strategy:
       fail-fast: false
       matrix:
-        os: [windows-latest]
+        python-version: ['3.10', '3.11', '3.12', '3.13']
+
+    steps:
+      - uses: actions/checkout@v6
+
+      - uses: actions/setup-python@v6
+        with:
+          python-version: ${{ matrix.python-version }}
+          cache: 'pip'
+
+      - name: dependencies
+        run: pip install '.[dev]'
+
+      - name: pytest
+        run: pytest --cov=pyds
+
+  wheels:
+    runs-on: ${{ matrix.os }}
+    needs: pytest
+
+    if: "github.event_name == 'push' && startsWith(github.ref, 'refs/tags')"
+
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-latest, macos-latest]
 
     steps:
       - uses: actions/checkout@v6
