--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -41,7 +41,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest]
+        os: [windows-latest, ubuntu-latest, macos-latest, macos-latest-large]
 
     steps:
       - uses: actions/checkout@v6
@@ -59,8 +59,6 @@ jobs:
 
       - name: build wheels
         run: python -m cibuildwheel
-        env:
-          CIBW_ENVIRONMENT_WINDOWS: SKBUILD_CMAKE_ARGS=-GNinja
 
       - uses: actions/upload-artifact@v5
         with:
