--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 file(GLOB_RECURSE SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cc")
 add_library(${PROJECT_NAME} STATIC ${SOURCES})
 target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
-target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_17)
+target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_20)
 set_property(TARGET ${PROJECT_NAME} PROPERTY INTERPROCEDURAL_OPTIMIZATION True)
 
 file(GLOB EXECUTABLE_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/examples/*.cc")
@@ -21,7 +21,7 @@ if(pybind11_FOUND)
   pybind11_add_module(pyds ${CMAKE_CURRENT_SOURCE_DIR}/pyds/ds.cc)
   target_link_libraries(pyds PRIVATE ${PROJECT_NAME})
   set_property(TARGET pyds PROPERTY INTERPROCEDURAL_OPTIMIZATION True)
-  set_target_properties(pyds PROPERTIES OUTPUT_NAME ds)
+  set_target_properties(pyds PROPERTIES OUTPUT_NAME _ds)
   install(TARGETS pyds DESTINATION pyds)
 else()
   message(STATUS "pybind11 not found, Python bindings will not be built.")
