Use archs to specify to build universal2 on macos arm and skip win32.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,4 +49,5 @@ select = ["E4", "E7", "E9", "F"]
 [tool.ruff.format]
 
 [tool.cibuildwheel]
-skip = "*-win32"
+macos.archs = ["universal2"]
+windows.archs = ["AMD64"]
