--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,3 +51,4 @@ select = ["E4", "E7", "E9", "F"]
 [tool.cibuildwheel]
 macos.archs = ["universal2"]
 windows.archs = ["AMD64"]
+test-command = "pytest"
