--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ fallback_version = "0.0.0"
 
 [tool.scikit-build]
 wheel.packages = ["pyds"]
+wheel.exclude = [".gitignore", "ds.cc"]
 metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
 build.verbose = true
 
