--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,4 +52,5 @@ select = ["E4", "E7", "E9", "F"]
 [tool.cibuildwheel]
 macos.archs = ["universal2"]
 windows.archs = ["AMD64"]
-test-command = "pytest"
+test-requires = ["pytest"]
+test-command = ["python -m pytest"]
