Fix test-command in pyproject.toml for cibuildwheel.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,4 +53,4 @@ select = ["E4", "E7", "E9", "F"]
 macos.archs = ["universal2"]
 windows.archs = ["AMD64"]
 test-requires = ["pytest"]
-test-command = ["python -m pytest"]
+test-command = ["python -m pytest {project}"]
