Replace pybind11 to nanobind.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,15 +16,15 @@ foreach(EXEC_FILE ${EXECUTABLE_SOURCES})
   set_property(TARGET ${EXEC_NAME} PROPERTY INTERPROCEDURAL_OPTIMIZATION True)
 endforeach()
 
-find_package(pybind11)
-if(pybind11_FOUND)
-  pybind11_add_module(pyds ${CMAKE_CURRENT_SOURCE_DIR}/pyds/ds.cc)
+find_package(nanobind)
+if(nanobind_FOUND)
+  nanobind_add_module(pyds ${CMAKE_CURRENT_SOURCE_DIR}/pyds/ds.cc)
   target_link_libraries(pyds PRIVATE ${PROJECT_NAME})
   set_property(TARGET pyds PROPERTY INTERPROCEDURAL_OPTIMIZATION True)
   set_target_properties(pyds PROPERTIES OUTPUT_NAME _ds)
   install(TARGETS pyds DESTINATION pyds)
 else()
-  message(STATUS "pybind11 not found, Python bindings will not be built.")
+  message(STATUS "nanobind not found, Python bindings will not be built.")
 endif()
 
 find_package(GTest)
