--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,13 +20,11 @@ license = "GPL-3.0-or-later"
 Repository = "https://github.com/USTC-KnowledgeComputingLab/ds.git"
 
 [tool.setuptools_scm]
-version_file = "pyds/_version.py"
+version_file = "apyds/_version.py"
 version_scheme = "no-guess-dev"
 fallback_version = "0.0.0"
 
 [tool.scikit-build]
-wheel.packages = ["pyds"]
-wheel.exclude = [".gitignore", "ds.cc"]
 metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
 build.verbose = true
 
