Fix cmake for renaming of python package.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,11 +18,11 @@ endforeach()
 
 find_package(pybind11)
 if(pybind11_FOUND)
-  pybind11_add_module(pyds ${CMAKE_CURRENT_SOURCE_DIR}/apyds/ds.cc)
-  target_link_libraries(pyds PRIVATE ${PROJECT_NAME})
-  set_property(TARGET pyds PROPERTY INTERPROCEDURAL_OPTIMIZATION True)
-  set_target_properties(pyds PROPERTIES OUTPUT_NAME _ds)
-  install(TARGETS pyds DESTINATION pyds)
+  pybind11_add_module(apyds ${CMAKE_CURRENT_SOURCE_DIR}/apyds/ds.cc)
+  target_link_libraries(apyds PRIVATE ${PROJECT_NAME})
+  set_property(TARGET apyds PROPERTY INTERPROCEDURAL_OPTIMIZATION True)
+  set_target_properties(apyds PROPERTIES OUTPUT_NAME _ds)
+  install(TARGETS apyds DESTINATION apyds)
 else()
   message(STATUS "pybind11 not found, Python bindings will not be built.")
 endif()
