--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ version_scheme = "no-guess-dev"
 fallback_version = "0.0.0"
 
 [tool.scikit-build]
+wheel.exclude = [".gitignore", "ds.cc"]
 metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
 build.verbose = true
 
