--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ fallback_version = "0.0.0"
 [tool.scikit-build]
 wheel.exclude = [".gitignore", "ds.cc"]
 metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
+cmake.targets = ["apyds"]
 build.verbose = true
 
 [project.optional-dependencies]
