--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -96,3 +96,7 @@ markdown_extensions:
   - pymdownx.tabbed:
       alternate_style: true
   - pymdownx.tasklist
+
+extra:
+  version:
+    provider: mike
