--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 site_name: DS - A Deductive System
+site_url: https://ustc-knowledgecomputinglab.github.io/ds
 repo_url: https://github.com/USTC-KnowledgeComputingLab/ds
-repo_name: USTC-KnowledgeComputingLab/ds
 site_description: A deductive system for logical inference, implemented in C++ with bindings for Python and TypeScript/JavaScript
 site_author: Hao Zhang
 copyright: GPL-3.0-or-later
@@ -28,16 +28,18 @@ theme:
     - search.highlight
     - search.share
     # - header.autohide
-    - navigation.footer
     - announce.dismiss
+    # - navigation.footer
   palette:
     - scheme: default
+      media: "(prefers-color-scheme: light)"
       primary: indigo
       accent: indigo
       toggle:
         icon: material/brightness-7
         name: Switch to dark mode
     - scheme: slate
+      media: "(prefers-color-scheme: dark)"
       primary: indigo
       accent: indigo
       toggle:
@@ -61,10 +63,8 @@ nav:
       - examples/index.md
 
 plugins:
-  - search
-  - projects
-  # - optimize
   - offline
+  - search
 
 markdown_extensions:
   - abbr
