Update docs, add sudoku as an example.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -60,7 +60,8 @@ nav:
       - Python API: api/python.md
       - C++ API: api/cpp.md
   - Examples:
-      - examples/index.md
+      - Basis Examples: examples/basic.md
+      - Sudoku: examples/sudoku.md
 
 plugins:
   - offline
