--- a/package.json
+++ b/package.json
@@ -14,13 +14,10 @@
     "browser": "dist/tsds.mjs",
     "types": "dist/tsds.d.mts",
     "files": [
-        "dist/ds.mjs",
-        "dist/ds.d.mts",
-        "dist/ds.mjs.map",
+        "dist/tsds.d.mts",
         "dist/ds.wasm",
         "dist/ds.wasm.map",
         "dist/tsds.mjs",
-        "dist/tsds.d.mts",
         "dist/tsds.mjs.map"
     ],
     "scripts": {
@@ -40,6 +37,7 @@
         "jest": "^30.2.0",
         "npm-run-all": "^4.1.5",
         "rollup": "^4.53.3",
+        "rollup-plugin-dts": "^6.3.0",
         "ts-jest": "^29.4.5",
         "ts-node": "^10.9.2",
         "tslib": "^2.8.1",
