--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,9 +5,7 @@
         "strict": true,
         "esModuleInterop": true,
         "isolatedModules": true,
-        "skipLibCheck": true,
-        "declaration": true,
-        "outDir": "dist"
+        "skipLibCheck": true
     },
     "include": ["atsds/*"]
 }
