--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -27,7 +27,7 @@ jobs:
           enable-cache: true
 
       - name: dependencies
-        run: uv sync --locked --all-extras --dev
+        run: uv sync --locked --extra dev
 
       - name: pytest
         run: uv run pytest --cov=pyds
@@ -49,16 +49,16 @@ jobs:
       - name: recovery tag information
         run: git fetch --tags --force
 
-      - uses: astral-sh/setup-uv@v7
+      - uses: actions/setup-python@v6
         with:
           python-version: ${{ env.PYTHON_LATEST_VERSION }}
-          enable-cache: true
+          cache: 'pip'
 
       - name: install cibuildwheel
-        run: uv pip install cibuildwheel
+        run: pip install cibuildwheel
 
       - name: build wheels
-        run: uv run cibuildwheel
+        run: python -m cibuildwheel
 
       - uses: actions/upload-artifact@v5
         with:
