--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,6 +3,7 @@
     "image": "mcr.microsoft.com/devcontainers/base:debian",
     "features": {
         "ghcr.io/devcontainers/features/python:1": {
+            "installJupyterlab": true,
             "version": "latest"
         },
         "ghcr.io/devcontainers/features/node:1": {
