--- a/bnf/package.json
+++ b/bnf/package.json
@@ -16,8 +16,8 @@
         "dist/index.mjs"
     ],
     "scripts": {
-        "ds": "antlr4 -Dlanguage=JavaScript grammars/Ds.g4 -visitor -no-listener -o atsds_bnf",
-        "dsp": "antlr4 -Dlanguage=JavaScript grammars/Dsp.g4 -visitor -no-listener -o atsds_bnf",
+        "ds": "antlr4 -Dlanguage=JavaScript Ds.g4 -visitor -no-listener -o atsds_bnf",
+        "dsp": "antlr4 -Dlanguage=JavaScript Dsp.g4 -visitor -no-listener -o atsds_bnf",
         "prepare": "npm-run-all ds dsp",
         "build": "rollup --config rollup.config.mjs"
     },
