--- a/bnf/package.json
+++ b/bnf/package.json
@@ -25,6 +25,8 @@
         "antlr4": "^4.13.2"
     },
     "devDependencies": {
+        "@rollup/plugin-commonjs": "^29.0.0",
+        "@rollup/plugin-json": "^6.1.0",
         "@rollup/plugin-node-resolve": "^16.0.3",
         "@rollup/plugin-terser": "^0.4.4",
         "npm-run-all": "^4.1.5",
