Update root pyproject.toml.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,6 +56,7 @@ select = ["E4", "E7", "E9", "F"]
 
 [tool.pytest.ini_options]
 addopts = "--cov=apyds"
+testpaths = "tests"
 
 [tool.cibuildwheel]
 macos.archs = ["universal2"]
