--- a/bnf/package.json
+++ b/bnf/package.json
@@ -16,11 +16,12 @@
         "dist/index.mjs"
     ],
     "scripts": {
-        "ds": "java -jar antlr-4.13.2-complete.jar -Dlanguage=JavaScript Ds.g4 -visitor -no-listener -o atsds_bnf",
-        "dsp": "java -jar antlr-4.13.2-complete.jar -Dlanguage=JavaScript Dsp.g4 -visitor -no-listener -o atsds_bnf",
+        "ds": "antlr4 -Dlanguage=JavaScript Ds.g4 -visitor -no-listener -o atsds_bnf",
+        "dsp": "antlr4 -Dlanguage=JavaScript Dsp.g4 -visitor -no-listener -o atsds_bnf",
         "prepare": "npm-run-all ds dsp",
         "build": "rollup --config rollup.config.mjs",
-        "test": "cross-env NODE_OPTIONS='$NODE_OPTIONS --experimental-vm-modules' jest --config=jest.config.mjs"
+        "test": "cross-env NODE_OPTIONS='$NODE_OPTIONS --experimental-vm-modules' jest --config=jest.config.mjs",
+        "all": "run-s build test"
     },
     "dependencies": {
         "antlr4": "^4.13.2"
