Use pip to install antlr4.

--- a/.github/workflows/bnf-jest.yml
+++ b/.github/workflows/bnf-jest.yml
@@ -21,7 +21,8 @@ jobs:
     steps:
       - uses: actions/checkout@v6
 
-      - uses: StoneMoe/setup-antlr4@v4.13.2
+      - name: install antlr4
+        run: pip install antlr4-tools
 
       - uses: actions/setup-node@v6
         with:
@@ -54,7 +55,8 @@ jobs:
       - name: recovery tag information
         run: git fetch --tags --force
 
-      - uses: StoneMoe/setup-antlr4@v4.13.2
+      - name: install antlr4
+        run: pip install antlr4-tools
 
       - uses: actions/setup-node@v6
         with:
