--- a/.github/workflows/bnf-jest.yml
+++ b/.github/workflows/bnf-jest.yml
@@ -10,7 +10,7 @@ env:
   NODE_LATEST_VERSION: '24'
 
 jobs:
-  bnf-jest:
+  jest:
     runs-on: ubuntu-latest
 
     strategy:
@@ -39,7 +39,7 @@ jobs:
 
   npm:
     runs-on: ubuntu-latest
-    needs: bnf-jest
+    needs: jest
 
     if: "github.event_name == 'push' && startsWith(github.ref, 'refs/tags')"
 
