--- a/.github/workflows/bnf-pytest.yml
+++ b/.github/workflows/bnf-pytest.yml
@@ -10,7 +10,7 @@ env:
   PYTHON_LATEST_VERSION: '3.14'
 
 jobs:
-  bnf-pytest:
+  pytest:
     runs-on: ubuntu-latest
 
     strategy:
@@ -39,7 +39,7 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
-    needs: bnf-pytest
+    needs: pytest
 
     if: "github.event_name == 'push' && startsWith(github.ref, 'refs/tags')"
 
