--- a/egg/pyproject.toml
+++ b/egg/pyproject.toml
@@ -13,7 +13,7 @@ dependencies = [
 ]
 requires-python = ">=3.11, <3.15"
 authors = [{ name = "Hao Zhang", email = "hzhangxyz@outlook.com" }]
-description = "E-Graph implementation for apyds - equality saturation and term rewriting"
+description = "E-Graph implementation for apyds"
 readme = "README.md"
 license = "AGPL-3.0-or-later"
 
