ci: include source distributions in PyPI uploads.
Description
This PR updates the GitHub Actions workflows to ensure that source distributions (sdist) are built and uploaded to PyPI alongside the wheels. This allows users to install the packages from source when a compatible wheel is not available for their platform.

Changes:
 - `pytest.yml` (apyds):
     - Added a new sdist job to build the source distribution using uv build --sdist.
     - Updated the upload job to wait for and download both wheels and the source distribution before publishing.
 - `bnf-pytest.yml` (apyds-bnf):
     - Updated the artifact upload step to include the entire dist/ directory (containing both .whl and .tar.gz files generated by uv build).
 - `egg-pytest.yml` (apyds-egg):
     - Updated the artifact upload step to include the entire dist/ directory.

--- a/.github/workflows/bnf-pytest.yml
+++ b/.github/workflows/bnf-pytest.yml
@@ -64,7 +64,7 @@ jobs:
       - uses: actions/upload-artifact@v6
         with:
           name: dist
-          path: bnf/dist/*.whl
+          path: bnf/dist/
 
   upload:
     runs-on: ubuntu-latest
