--- a/.github/workflows/egg-pytest.yml
+++ b/.github/workflows/egg-pytest.yml
@@ -58,7 +58,7 @@ jobs:
       - uses: actions/upload-artifact@v6
         with:
           name: dist
-          path: egg/dist/*.whl
+          path: egg/dist/
 
   upload:
     runs-on: ubuntu-latest
