--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -65,9 +65,34 @@ jobs:
           name: wheels-${{ matrix.os }}
           path: wheelhouse/*.whl
 
+  sdist:
+    runs-on: ubuntu-latest
+    needs: pytest
+
+    if: "github.event_name == 'push' && startsWith(github.ref, 'refs/tags')"
+
+    steps:
+      - uses: actions/checkout@v6
+
+      - name: recovery tag information
+        run: git fetch --tags --force
+
+      - uses: astral-sh/setup-uv@v7
+        with:
+          python-version: ${{ env.PYTHON_LATEST_VERSION }}
+          enable-cache: true
+
+      - name: build sdist
+        run: uv build --sdist
+
+      - uses: actions/upload-artifact@v6
+        with:
+          name: sdist
+          path: dist/*.tar.gz
+
   upload:
     runs-on: ubuntu-latest
-    needs: wheels
+    needs: [wheels, sdist]
 
     environment:
       name: pypi
@@ -81,6 +106,11 @@ jobs:
           pattern: wheels-*
           path: dist
           merge-multiple: true
+
+      - uses: actions/download-artifact@v7
+        with:
+          name: sdist
+          path: dist
 
       - uses: pypa/gh-action-pypi-publish@release/v1
         with:
