build: use CMake components to exclude dev files from wheel

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,7 +36,7 @@ if(pybind11_FOUND)
   target_link_libraries(apyds PRIVATE ${PROJECT_NAME})
   set_property(TARGET apyds PROPERTY INTERPROCEDURAL_OPTIMIZATION True)
   set_target_properties(apyds PROPERTIES OUTPUT_NAME _ds)
-  install(TARGETS apyds DESTINATION apyds)
+  install(TARGETS apyds DESTINATION apyds COMPONENT python)
 else()
   message(STATUS "pybind11 not found, Python bindings will not be built.")
 endif()
