docs: migrate from MkDocs to VitePress
- Replaced MkDocs with VitePress for documentation.
- Converted Markdown files to VitePress-compatible syntax (admonitions, code groups).
- Updated home page with VitePress home layout.
- Refactored Sudoku interactive example to work with VitePress/Vue.
- Updated project dependencies and .gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -106,9 +106,10 @@ coverage/
 biome.jsonc-backup/
 
 ########################################
-# MkDocs
+# VitePress
 ########################################
-site/
+.vitepress/dist
+.vitepress/cache
 
 ########################################
 # IDE: VSCode / JetBrains / Vim / Emacs
