--- a/package.json
+++ b/package.json
@@ -22,20 +22,28 @@
         "rollup": "rollup --config rollup.config.mjs",
         "build": "run-s emcc rollup",
         "test": "cross-env NODE_OPTIONS='$NODE_OPTIONS --experimental-vm-modules' jest --config=jest.config.mjs",
-        "all": "run-s build test"
+        "all": "run-s build test",
+        "docs:dev": "vitepress dev",
+        "docs:build": "vitepress build",
+        "docs:preview": "vitepress preview"
     },
     "devDependencies": {
         "@rollup/plugin-node-resolve": "^16.0.3",
         "@rollup/plugin-terser": "^0.4.4",
         "@rollup/plugin-typescript": "^12.3.0",
         "@types/jest": "^30.0.0",
+        "@types/node": "^25.0.3",
         "cross-env": "^10.1.0",
+        "ejs": "^3.1.10",
         "jest": "^30.2.0",
+        "markdown-it-mathjax3": "^4.3.2",
         "npm-run-all": "^4.1.5",
         "rollup": "^4.54.0",
         "rollup-plugin-dts": "^6.3.0",
         "ts-jest": "^29.4.6",
         "tslib": "^2.8.1",
-        "typescript": "^5.9.3"
+        "typescript": "^5.9.3",
+        "vitepress": "^1.6.4",
+        "vue": "^3.5.26"
     }
 }
