--- a/.github/workflows/bnf-jest.yml
+++ b/.github/workflows/bnf-jest.yml
@@ -6,9 +6,6 @@ on:
   - pull_request
   - push
 
-env:
-  NODE_LATEST_VERSION: '24'
-
 jobs:
   jest:
     runs-on: ubuntu-latest
@@ -60,7 +57,7 @@ jobs:
 
       - uses: actions/setup-node@v6
         with:
-          node-version: ${{ env.NODE_LATEST_VERSION }}
+          node-version: latest
           cache: 'npm'
 
       - name: version
