--- a/.github/workflows/egg-pytest.yml
+++ b/.github/workflows/egg-pytest.yml
@@ -6,9 +6,6 @@ on:
   - pull_request
   - push
 
-env:
-  PYTHON_LATEST_VERSION: '3.14'
-
 jobs:
   pytest:
     runs-on: ubuntu-latest
@@ -48,7 +45,7 @@ jobs:
 
       - uses: astral-sh/setup-uv@v7
         with:
-          python-version: ${{ env.PYTHON_LATEST_VERSION }}
+          python-version: latest
           enable-cache: true
 
       - name: build
