--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -6,9 +6,6 @@ on:
   - pull_request
   - push
 
-env:
-  PYTHON_LATEST_VERSION: '3.14'
-
 jobs:
   pytest:
     runs-on: ubuntu-latest
@@ -51,7 +48,7 @@ jobs:
 
       - uses: actions/setup-python@v6
         with:
-          python-version: ${{ env.PYTHON_LATEST_VERSION }}
+          python-version: latest
           cache: 'pip'
 
       - name: install cibuildwheel
@@ -79,7 +76,7 @@ jobs:
 
       - uses: astral-sh/setup-uv@v7
         with:
-          python-version: ${{ env.PYTHON_LATEST_VERSION }}
+          python-version: latest
           enable-cache: true
 
       - name: build sdist
