fix(bnf-pytest): use 'latest' python version in build job

--- a/.github/workflows/bnf-pytest.yml
+++ b/.github/workflows/bnf-pytest.yml
@@ -51,7 +51,7 @@ jobs:
 
       - uses: astral-sh/setup-uv@v7
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: latest
           enable-cache: true
 
       - name: build
