--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "ts-jest": "^29.4.6",
         "tslib": "^2.8.1",
         "typescript": "^5.9.3",
-        "vitepress": "^1.6.4"
+        "vitepress": "^1.6.4",
+        "vue": "^3.5.26"
     }
 }
