--- a/.github/workflows/bnf-jest.yml
+++ b/.github/workflows/bnf-jest.yml
@@ -6,6 +6,9 @@ on:
   - pull_request
   - push
 
+env:
+  NODE_LATEST_VERSION: '24'
+
 jobs:
   jest:
     runs-on: ubuntu-latest
@@ -57,6 +60,7 @@ jobs:
 
       - uses: actions/setup-node@v6
         with:
+          node-version: ${{ env.NODE_LATEST_VERSION }}
           cache: 'npm'
 
       - name: version
