--- a/.github/workflows/jest.yml
+++ b/.github/workflows/jest.yml
@@ -8,6 +8,7 @@ on:
 
 env:
   EM_CACHE_FOLDER: 'emsdk-cache'
+  NODE_LATEST_VERSION: '24'
 
 jobs:
   jest:
@@ -61,12 +62,13 @@ jobs:
 
       - uses: actions/setup-node@v6
         with:
+          node-version: ${{ env.NODE_LATEST_VERSION }}
           cache: 'npm'
 
       - uses: actions/cache@v5
         with:
           path: ${{ env.EM_CACHE_FOLDER }}
-          key: jest-em-cache-${{ runner.os }}
+          key: jest-em-cache-${{ runner.os }}-${{ env.NODE_LATEST_VERSION }}
 
       - uses: pyodide/setup-emsdk@v15
         with:
