--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -6,6 +6,9 @@ on:
   - pull_request
   - push
 
+env:
+  PYTHON_LATEST_VERSION: '3.14'
+
 jobs:
   pytest:
     runs-on: ubuntu-latest
@@ -48,6 +51,7 @@ jobs:
 
       - uses: actions/setup-python@v6
         with:
+          python-version: ${{ env.PYTHON_LATEST_VERSION }}
           cache: 'pip'
 
       - name: install cibuildwheel
@@ -75,6 +79,7 @@ jobs:
 
       - uses: astral-sh/setup-uv@v7
         with:
+          python-version: ${{ env.PYTHON_LATEST_VERSION }}
           enable-cache: true
 
       - name: build sdist
